# msgmodel

./: .coverage  .gitignore  FILE_LIKE_EXAMPLES.py  FILE_LIKE_IMPLEMENTATION.md  IMPLEMENTATION_COMPLETE_v3.2.1.md  MSGMODEL_v3.3.0_BREAKING_CHANGES_AGENT_PROMPT.md  PRERELEASE_TESTING_REPORT.md  PYPI_RELEASE_GUIDE.md  QUICK_START_FILE_LIKE.py  README.md  STREAMING_FIX.md  max.persona  msgModel.py  prompt-20251208-random1.txt  pyproject.toml  test_file_like_demo.py
docs/: DEPLOYMENT_v4.0.1.md  PRIVACY_QUICK_REFERENCE.md  RELEASE_NOTES_v4.0.1.md  V4_0_1_IMPLEMENTATION_COMPLETE.md
msgmodel/: __init__.py  config.py
msgmodel/providers/: gemini.py  openai.py
