[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "msgmodel"
version = "2.0.0"
description = "A unified Python library for interacting with LLM providers (OpenAI, Gemini, Claude)"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Leo Dias"}
]
keywords = [
    "llm",
    "openai",
    "gemini",
    "claude",
    "anthropic",
    "gpt",
    "ai",
    "machine-learning",
    "chatbot",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
]

[project.optional-dependencies]
claude = [
    "anthropic>=0.18.0",
]
all = [
    "anthropic>=0.18.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
msgmodel = "msgmodel.__main__:main"

[project.urls]
Homepage = "https://github.com/LeoooDias/msgModel"
Repository = "https://github.com/LeoooDias/msgModel"
Issues = "https://github.com/LeoooDias/msgModel/issues"

[tool.setuptools.packages.find]
include = ["msgmodel*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]
